<resources>
    <string name="app_name">My Rated Library</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="comment">Comment</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <plurals name="books_count">
        <item quantity="one">%1$d book</item>
        <item quantity="other">%1$d books</item>
    </plurals>
    <string name="insert_book_failure">Could not insert book</string>
    <string name="insert_book_success">The book has been saved</string>
    <string name="update_book_failure">Could not update book</string>
    <string name="update_book_success">The book has been updated</string>
    <string name="delete_book_failure">Could not delete book</string>
    <string name="delete_book_success">The book has been deleted</string>
    <string name="insert_author_failure">Could not insert author</string>
    <string name="insert_author_success">The author has been saved</string>
    <string name="update_author_failure">Could not update author</string>
    <string name="update_author_success">The author has been updated</string>
</resources>
